<resources>
    <string name="app_name">SSUmenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="about_this_app">This app was made for Udacity Android Capstone project;</string>
    <string name="email_address">velocity2772@gmail.com</string>
    <string name="title_activity_about">About this App</string>

    <string name="action_share">Share</string>
    <string name="title_activity_info">Cafeteria Information</string>

    <string name="student_cafe">학생식당</string>
    <string name="worker_cafe">교직원식당</string>
    <string name="food_court">푸드코트</string>
    <string name="info_student_cafe">Mon ~ Fri / 10:20 ~ 14:00 (Lunch)</string>
    <string name="info_worker_cafe">Mon ~ Fri / 11:20 ~ 14:00 (Lunch)</string>
    <string name="info_worker_cafe2">Mon ~ Fri / 17:00 ~ 18:00 (Dinner)</string>
    <string name="info_food_court">Mon ~ Fri / 10:20 ~ 15:00</string>

    <string name="operating_hour">운영시간</string>

</resources>
